# pattern_mining

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pattern_mining.py  pyproject.toml  requirements.txt  tests.py
examples/: arnolds_and_gartner.py  carrasco_and_oncina.py  readme_example.py
examples/nbs/: 01_basic_usage.ipynb  02_visualising_a_pdfa.ipynb  03_evaluating_a_pdfa.ipynb  verifying_literature.ipynb
pattern_mining/: __init__.py  _validation.py  alergia.py  ppta.py  probabilities.py  state_merging.py  state_statistics.py  visualisation.py
pdfa_learning/: __init__.py  _validation.py  alergia.py  evaluation.py  ppta.py  state_statistics.py  visualisation.py
tests/: conftest.py  test_alergia.py  test_evaluation.py  test_integration.py  test_ppta.py  test_probabilities.py  test_state_merging.py  test_state_statistics.py
