[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfa-learning"
version = "1.0.0"
description = "Tools for learning probabilistic deterministic finite automata using ALERGIA."
license = "MIT"
readme = "README.md"
authors = [
{ name = "Matthew Howells" },
{ name = "Paul Harper" },
{ name = "Daniel Gartner" },
{ name = "Geraint Palmer-Liyu" },
]

[project.urls]
Repository = "https://github.com/MHowells/pdfa-learning"
Issues = "https://github.com/MHowells/pdfa-learning/issues"
"Zenodo record" = "https://doi.org/10.5281/zenodo.20932562"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdfa_learning*"]